00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: red-hat-test
  labels:
    name: red-hat-test
