03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: red-hat-test
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/part-of: nginx-simple
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
