05-networkpolicy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: red-hat-test
spec:
  podSelector: {}
  policyTypes:
    - Ingress
